feat: zod validate
